fixes mobile, dark mode theme

--- a/djaoapp/static/scss/base/djaodjin-dashboard.scss
+++ b/djaoapp/static/scss/base/djaodjin-dashboard.scss
@@ -180,6 +180,8 @@ pre.code{
 .dashboard-nav-main .navbar-header {
     padding-top: 5px;
     padding-bottom: 5px;
+    overflow: visible;
+    display: inline-flex;
 }
 
 .dashboard-nav-menu {
@@ -544,10 +546,7 @@ input::-webkit-datetime-edit {
     padding: 0;
 }
 
-@include media-breakpoint-down(sm) {
-
-    .dashboard-content > .fullviewport {
-    }
+@include media-breakpoint-down(md) {
 
     .dashboard-content > header,
     .dashboard-content > .fullviewport > header {
@@ -556,7 +555,11 @@ input::-webkit-datetime-edit {
       z-index: 4;
       width: 100%;
       left: 0;
-      background-color: $dashboard-sidebar-bg;
+    }
+
+    .dashboard-content > header,
+    .dashboard-content > .fullviewport > header {
+//      background-color: $dashboard-sidebar-bg;
     }
 
     .dashboard-nav,
@@ -603,7 +606,7 @@ input::-webkit-datetime-edit {
     }
 }
 
-@include media-breakpoint-up(sm) {
+@include media-breakpoint-up(md) {
   .dashboard-inner-container {
     position: inherit;
     left: 0;
@@ -633,6 +636,10 @@ input::-webkit-datetime-edit {
 
 .dashboard-nav-color-theme {
     background-color: $dashboard-sidebar-bg;
+    color: $dashboard-sidebar-color;
+}
+
+.dashboard-nav-color-theme .nav-link {
     color: $dashboard-sidebar-color;
 }
 
